--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod": "ng build --prod", 
+    "build:prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -23,13 +23,15 @@
     "@angular/platform-browser": "~11.2.6",
     "@angular/platform-browser-dynamic": "~11.2.6",
     "@angular/router": "~11.2.6",
+    "bootstrap": "^5.1.3",
     "file-saver": "^2.0.5",
+    "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "ng-material-multilevel-menu": "^5.5.3",
-    "ngx-bootstrap": "^8.0.0",
     "ngx-mat-select-search": "^3.2.0",
     "ngx-take-until-destroy": "^5.4.0",
     "rxjs": "~6.6.0",
+    "tether": "^2.0.0",
     "tslib": "^2.0.0",
     "xlsx": "^0.16.9",
     "zone.js": "~0.11.3"
