--- a/angular.json
+++ b/angular.json
@@ -31,11 +31,15 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
+              "src/styles.css", 
               "src/material-style.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "src/assets/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.js",
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/tether/dist/js/tether.js"
+              ]
           },
           "configurations": {
             "production": {
